# clause-rag-v0

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
data/: clause_v0.md  questions_v0.yaml
docs/: index.html
scripts/: run_rag.py
src/rag/: answer.py  embed.py  retrieve.py
